<resources>
    <string name="app_name">MS Bank</string>
    <string name="title_settings">Settings</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_cards">Cards</string>
    <string name="confirm">Confirm</string>
    <string name="continue_string">Continue</string>

    <string name="currency">Kč</string>

    <!-- Pin -->
    <string name="loading_view_default_error">Unexpected error occurred, sorry :).</string>
    <string name="loading_view_default_reload">Try again</string>
    <string name="loading_view_default_empty">Nothing to see here…</string>

    <string name="loading_view_default_error_client_error">Something wrong happened on client side.</string>
    <string name="loading_view_default_error_server_error">Something wrong happened on server side.</string>
    <string name="loading_view_default_error_no_internet">Check your internet connection.</string>


    <string name="pin_invalid">Pin does not match, please try again</string>

    <!-- DashBoard -->
    <string name="dashboard_account_button_pay">Pay</string>
    <string name="dashboard_account_button_qr">QR</string>
    <string name="dashboard_account_button_info">Info</string>
    <string name="dashboard_account_button_settings">Settings</string>

    <!-- Payment -->
    <string name="payment_from_account">Z účtu</string>
    <string name="payment_to_account">Na účet</string>
    <string name="payment_amount">Částka</string>
    <string name="payment_variable_symbol">Variabilní symbol</string>
    <string name="payment_specific_symbol">Specifický symbol</string>
    <string name="payment_constant_symbol">Konstantní symbol</string>
    <string name="payment_message_for_me">Zpráva pro mě</string>
    <string name="payment_message_for_receiver">Zpráva pro příjemce</string>
    <string name="payment_date">Datum splatnosti</string>
    <string name="payment_pay">Zaplatit</string>


</resources>
