<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_splash">

    <fragment
        android:id="@+id/navigation_splash"
        android:name="cz.sima.msbank.feature.splash.SplashFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_splash">
        <action
            android:id="@+id/action_navigation_splash_to_pinFragment"
            app:popUpTo="@id/navigation_splash"
            app:popUpToInclusive="true"
            app:destination="@id/navigation_pin" />
    </fragment>

    <fragment
        android:id="@+id/navigation_pin"
        android:name="cz.sima.msbank.feature.pin.PinFragment"
        android:label="PinFragment" >
        <action
            android:id="@+id/action_pinFragment_to_navigation_dashboard"
            app:popUpTo="@id/navigation_pin"
            app:popUpToInclusive="true"
            app:destination="@id/navigation_dashboard" />
    </fragment>

    <fragment
        android:id="@+id/navigation_settings"
        android:name="cz.sima.msbank.feature.settings.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="cz.sima.msbank.feature.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_card"
        android:name="cz.sima.msbank.feature.cards.CardsFragment"
        android:label="@string/title_cards"
        tools:layout="@layout/fragment_cards" />

</navigation>
